# hatch-msgfmt-s-ball

./: .gitignore  CHANGES.txt  LICENSE  README.md  pyproject.toml
hatch_msgfmt/: __about__.py  __init__.py  hooks.py  plugin.py
tests/: test_launch.py  test_plugin.py
tests/data/: foo-fr.mo  foo-fr.po
